[workspace]
members = [".", "derive", "builder"]

[package]
name = "quix"
version = "0.0.7"
description = "Distribution layer for actix"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
edition = "2018"
license = "MIT"

build = "build.rs"

[build-dependencies]
quix-build = { path = "./builder", version = "0.0.7", package = "quix-build" }

[dependencies]
derive = { path = "./derive", version = "0.0.7", package = "quix-derive" }

anyhow = "1.0.34"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.11"
env_logger = "0.8.1"

prost = { version = "0.6.1", features = [] }

bytes = "0.5.6"
futures = "0.3.8"

actix = "0.10"
actix-rt = "1.1.1"
actix-codec = "0.3.0"

serde = "1.0.117"
tokio = { version = "0.2" }
tokio-util = { version = "=0.3.1", features = ["codec"] }