[package]
name = "quix-build"
version = "0.0.7"
description = "Quix: Distribution layer for actix (build script support)cd .."
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
syn = "1.0.48"
quote = "1.0.7"
prost-build = "0.6.1"
crc64 = "1.0.0"
crc = "1.8"