[package]
name = "derive"
version = "0.0.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
darling = "0.10.2"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["parsing"] }

