[package]
name = "quix-derive"
version = "0.0.7"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
description = "Derive macro for generation quix::DynHandler"
keywords = ["template", "proc_macro", "procmacro", "actix"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["parsing"] }

